k8s/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: load-generator
    image: busybox:1.36.0
    command: ["/bin/sh"]
    args: ["-c", "while sleep 0.01; do wget -q -O- http://guestbook; done"]
  restartPolicy: Never
